--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
             <table class="table">
                 <thead>
                   <tr>
-                    <th scope="col">A</th>
-                    <th scope="col">B</th>
-                    <th scope="col">True</th>
-                    <th scope="col">Don't care</th>
+                    <th>\(A\)</th>
+                    <th>\(B\)</th>
+                    <th>\(\text{True}\)</th>
+                    <th>\(\text{Don't care}\)</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
-                    <td>0</td>
-                    <td>0</td>
+                    <td>\(0\)</td>
+                    <td>\(0\)</td>
                     <td><div class="form-check">
                         <input class="form-check-input" type="checkbox" value="">
                       </div></td>
@@ -51,8 +51,8 @@
                       </div></td>
                   </tr>
                   <tr>
-                    <td>0</td>
-                    <td>1</td>
+                    <td>\(0\)</td>
+                    <td>\(1\)</td>
                     <td><div class="form-check">
                         <input class="form-check-input" type="checkbox" value="">
                       </div></td>
@@ -62,8 +62,8 @@
                   </tr>
 
                   <tr>
-                    <td>1</td>
-                    <td>0</td>
+                    <td>\(1\)</td>
+                    <td>\(0\)</td>
                     <td><div class="form-check">
                         <input class="form-check-input" type="checkbox" value="">
                       </div></td>
@@ -72,8 +72,8 @@
                       </div></td>
                   </tr>
                   <tr>
-                    <td>1</td>
-                    <td>1</td>
+                    <td>\(1\)</td>
+                    <td>\(1\)</td>
                     <td><div class="form-check">
                         <input class="form-check-input" type="checkbox" value="">
                       </div></td>
